--- a/src/etc/relayd.conf
+++ b/src/etc/relayd.conf
@@ -1,4 +1,4 @@
-# $OpenBSD: relayd.conf,v 1.13 2008/03/03 16:58:41 reyk Exp $
+# $OpenBSD: relayd.conf,v 1.1 2014/07/11 21:20:10 deraadt Exp $
 #
 # Macros
 #
@@ -27,7 +27,7 @@ redirect www {
 	listen on $ext_addr port http interface trunk0
 
 	# tag every packet that goes thru the rdr rule with RELAYD
-	tag RELAYD
+	pftag RELAYD
 
 	forward to <webhosts> check http "/" code 200
 	forward to <fallback> check icmp
@@ -37,9 +37,10 @@ redirect www {
 # Relay and protocol for HTTP layer 7 loadbalancing and SSL acceleration
 #
 http protocol httpssl {
-	header append "$REMOTE_ADDR" to "X-Forwarded-For"
-	header append "$SERVER_ADDR:$SERVER_PORT" to "X-Forwarded-By"
-	header change "Connection" to "close"
+	match request header append "X-Forwarded-For" value "$REMOTE_ADDR"
+	match request header append "X-Forwarded-By" \
+	    value "$SERVER_ADDR:$SERVER_PORT"
+	match request header set "Connection" value "close"
 
 	# Various TCP performance options
 	tcp { nodelay, sack, socket buffer 65536, backlog 128 }
@@ -82,24 +83,31 @@ http protocol httpfilter {
 	# Return HTTP/HTML error pages to the client
 	return error
 
+	# Block disallowed sites
+	match request label "URL filtered!"
+	block request quick url "www.example.com/" value "*"
+
 	# Block disallowed browsers
-	label "Please try a <em>different Browser</em>"
-	header filter "Mozilla/4.0 (compatible; MSIE *" from "User-Agent"
+	match request label "Please try a <em>different Browser</em>"
+	block request quick header "User-Agent" \
+	    value "Mozilla/4.0 (compatible; MSIE *"
 
 	# Block some well-known Instant Messengers
-	label "Instant messenger disallowed!"
-	response header filter "application/x-msn-messenger" from "Content-Type"
-	response header filter "app/x-hotbar-xip20" from "Content-Type"
-	response header filter "application/x-icq" from "Content-Type"
-	response header filter "AIM/HTTP" from "Content-Type"
-	response header filter "application/x-comet-log" from "Content-Type"
+	match request label "Instant messenger disallowed!"
+	block response quick header "Content-Type" \
+	    value "application/x-msn-messenger"
+	block response quick header "Content-Type" value "app/x-hotbar-xip20"
+	block response quick header "Content-Type" value "application/x-icq"
+	block response quick header "Content-Type" value "AIM/HTTP"
+	block response quick header "Content-Type" \
+	    value "application/x-comet-log"
 }
 
 relay httpproxy {
-	# Listen on localhost, accept redirected connections from pf(4)
+	# Listen on localhost, accept diverted connections from pf(4)
 	listen on 127.0.0.1 port 8080
 	protocol httpfilter
 
 	# Forward to the original target host
-	forward to nat lookup
+	forward to destination
 }
