--- a/src/usr.sbin/relayd/Makefile
+++ b/src/usr.sbin/relayd/Makefile
@@ -1,10 +1,12 @@
-#	$OpenBSD: Makefile,v 1.23 2012/09/20 12:30:20 reyk Exp $
+#	$OpenBSD: Makefile,v 1.27 2014/04/21 14:57:17 reyk Exp $
 
 PROG=		relayd
-SRCS=		parse.y log.c control.c ssl.c ssl_privsep.c \
-		relayd.c pfe.c pfe_filter.c pfe_route.c hce.c relay.c \
-		relay_http.c relay_udp.c carp.c check_icmp.c check_tcp.c \
-		check_script.c name2id.c snmp.c shuffle.c proc.c config.c
+SRCS=		parse.y
+SRCS+=		agentx.c ca.c carp.c check_icmp.c check_script.c \
+		check_tcp.c config.c control.c hce.c log.c name2id.c \
+		pfe.c pfe_filter.c pfe_route.c proc.c \
+		relay.c relay_http.c relay_udp.c relayd.c \
+		shuffle.c snmp.c ssl.c ssl_privsep.c
 MAN=		relayd.8 relayd.conf.5
 
 LDADD=		-levent -lssl -lcrypto -lutil
@@ -12,8 +14,8 @@ DPADD=		${LIBEVENT} ${LIBSSL} ${LIBCRYPTO} ${LIBUTIL}
 CFLAGS+=	-Wall -I${.CURDIR} -I${.CURDIR}/../snmpd
 CFLAGS+=	-Wstrict-prototypes -Wmissing-prototypes
 CFLAGS+=	-Wmissing-declarations
-CFLAGS+=	-Wshadow -Wpointer-arith -Wcast-qual
-CFLAGS+=	-Wsign-compare -Wbounded
+CFLAGS+=	-Wshadow -Wpointer-arith
+CFLAGS+=	-Wsign-compare
 CLEANFILES+=	y.tab.h
 
 .include <bsd.prog.mk>
